--- a/front-server/requirements.txt
+++ b/front-server/requirements.txt
@@ -1,14 +1,32 @@
 aio-pika==6.8.0
 aiohttp==3.7.3
 aiormq==3.3.1
+appdirs==1.4.4
 async-timeout==3.0.1
 attrs==20.3.0
+black==20.8b1
 chardet==3.0.4
+click==7.1.2
+dataclasses==0.8
 gunicorn==20.0.4
 idna==3.1
 idna-ssl==1.1.0
+importlib-metadata==3.7.0
+iniconfig==1.1.1
 multidict==5.1.0
+mypy-extensions==0.4.3
+packaging==20.9
 pamqp==2.3.0
+pathspec==0.8.1
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.2
+pytest-aiohttp==0.3.0
 PyYAML==5.4.1
+regex==2020.11.13
+toml==0.10.2
+typed-ast==1.4.2
 typing-extensions==3.7.4.3
 yarl==1.6.3
+zipp==3.4.0
