--- a/front-server/requirements.txt
+++ b/front-server/requirements.txt
@@ -7,12 +7,14 @@ attrs==20.3.0
 black==20.8b1
 chardet==3.0.4
 click==7.1.2
-dataclasses==0.8
+dataclasses==0.6
+flake8==3.9.0
 gunicorn==20.0.4
 idna==3.1
 idna-ssl==1.1.0
 importlib-metadata==3.7.0
 iniconfig==1.1.1
+mccabe==0.6.1
 multidict==5.1.0
 mypy-extensions==0.4.3
 packaging==20.9
@@ -20,6 +22,8 @@ pamqp==2.3.0
 pathspec==0.8.1
 pluggy==0.13.1
 py==1.10.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
 pyparsing==2.4.7
 pytest==6.2.2
 pytest-aiohttp==0.3.0
