--- a/front-server/config/api_dev.yaml
+++ b/front-server/config/api_dev.yaml
@@ -1,3 +1,4 @@
 host: localhost
 port: 8080
-broker_url: amqp://guest:guest@172.17.0.2:5672/
+broker_url: amqp://guest:guest@localhost:5672/
+# broker_url: amqp://guest:guest@172.17.0.2:5672/
